...
            switch state {
            case .prepare:
                    ProgressView()
            case .done:
                Text("Your peer wants to send you \"\(self.fileName ?? "Unknown")\" (size: \(self.humanSize)).")
                HStack {
                    Button("Accept", action: {
                        var url = self.openFileSelector()
                        if let uri = url {
                            url = uri.appendingPathComponent(fileName ?? "Unknown")
                            self.onChangeFunc(true)
                        }
                        self.url = url
...
